# wojak-defi-framework

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml
.docker/: Dockerfile
.github/actions/build-cache/: action.yml
.github/actions/deps-install/: action.yml
.github/actions/download-and-verify/: action.yml
.github/workflows/: defi_build.yml  dev-build.yml  fmt-and-lint.yml  pr-lint.yml  release-build.yml  test.yml  validate-cargo-lock.yml
docs/: ANDROID.md  WASM_BUILD.md
mm2src/adex_cli/: Cargo.toml
mm2src/coins/: Cargo.toml  coin_balance.rs  coin_errors.rs  eth.rs  lightning.rs  lp_coins.rs  lp_price.rs  my_tx_history_v2.rs  nft.rs  qrc20.rs  siacoin.rs  solana.rs  test_coin.rs  utxo.rs  z_coin.rs
mm2src/coins/eth/: eip1559_gas_fee.rs  erc20.rs  eth_balance_events.rs  eth_hd_wallet.rs  eth_rpc.rs  eth_tests.rs  eth_wasm_tests.rs  eth_withdraw.rs  for_tests.rs  tron.rs  v2_activation.rs
mm2src/coins/hd_wallet/: coin_ops.rs  mod.rs  pubkey.rs  withdraw_ops.rs
mm2src/coins/lightning/: ln_platform.rs  ln_utils.rs
mm2src/coins/nft/: nft_errors.rs  nft_structs.rs  nft_tests.rs
mm2src/coins/qrc20/: history.rs  qrc20_tests.rs  swap.rs
mm2src/coins/rpc_command/: account_balance.rs  get_estimated_fees.rs  get_new_address.rs  init_account_balance.rs  init_create_account.rs  init_scan_for_new_addresses.rs  init_withdraw.rs  mod.rs  offline_keys.rs
mm2src/coins/tendermint/: mod.rs  tendermint_balance_events.rs  tendermint_coin.rs  tendermint_token.rs  tendermint_tx_history_v2.rs
mm2src/coins/tx_history_storage/: mod.rs  sql_tx_history_storage_v2.rs
mm2src/coins/utxo/: bch.rs  bchd_grpc.rs  qtum.rs  qtum_delegation.rs  rpc_clients.rs  slp.rs  tx_history_events.rs  utxo_balance_events.rs  utxo_common.rs  utxo_common_tests.rs  utxo_hd_wallet.rs  utxo_standard.rs  utxo_tests.rs  utxo_tx_history_v2.rs  utxo_wasm_tests.rs  utxo_withdraw.rs
mm2src/coins/z_coin/: storage.rs  tx_history_events.rs  z_balance_streaming.rs  z_coin_errors.rs  z_coin_native_tests.rs  z_htlc.rs  z_rpc.rs  z_tx_history.rs
mm2src/coins_activation/: Cargo.toml
mm2src/coins_activation/src/: bch_with_tokens_activation.rs  context.rs  erc20_token_activation.rs  eth_with_token_activation.rs  init_erc20_token_activation.rs  init_token.rs  lib.rs  platform_coin_with_tokens.rs  prelude.rs  sia_coin_activation.rs  slp_token_activation.rs  tendermint_token_activation.rs  tendermint_with_assets_activation.rs  token.rs  z_coin_activation.rs
mm2src/common/: Cargo.toml  common.rs  expirable_map.rs  jsonrpc_client.rs  log.rs  notifier.rs  on_drop_callback.rs
mm2src/common/custom_futures/: repeatable.rs
mm2src/crypto/src/: crypto_ctx.rs  encrypt.rs  global_hd_ctx.rs  hw_ctx.rs  key_derivation.rs  lib.rs  mnemonic.rs  privkey.rs
mm2src/mm2_bin_lib/: Cargo.toml  build.rs
mm2src/mm2_bin_lib/src/: lib.rs  mm2_bin.rs  mm2_native_lib.rs  (+1 more)
mm2src/mm2_core/: Cargo.toml
mm2src/mm2_event_stream/: Cargo.toml
mm2src/mm2_event_stream/src/: event.rs  lib.rs  manager.rs  streamer.rs
mm2src/mm2_main/: Cargo.toml  build.rs
mm2src/mm2_net/: Cargo.toml
mm2src/mm2_p2p/: Cargo.toml
mm2src/mm2_p2p/src/: lib.rs  network.rs  p2p_ctx.rs
mm2src/mm2_p2p/src/application/: network_event.rs
mm2src/mm2_p2p/src/application/request_response/: network_info.rs
mm2src/mm2_p2p/src/behaviours/: atomicdex.rs  mod.rs  peers_exchange.rs  request_response.rs
mm2src/proxy_signature/: Cargo.toml
mm2src/rpc_task/: Cargo.toml
mm2src/trading_api/: Cargo.toml
mm2src/trading_api/src/: lib.rs  one_inch_api.rs
mm2src/trading_api/src/one_inch_api/: client.rs  errors.rs  types.rs
mm2src/trezor/: Cargo.toml
(+233 files in other folders)
